--- a/index.html
+++ b/index.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Coffee Menu</title>
-  </head>
-  <body>
-    <img src="pictures/menu.jpg" alt="menu">
-    <ol>
-      <b><li><h2>Beverages</h2></li></b>
-        <h3><u>Hot Beverages</u></h3>
-          <ul>
-            <li>Tea</li>
-            <li>Coffee</li>
-            <ol type="a">
-              <li>With Milk</li>
-              <li>Without Milk</li>
-            </ol>
-            <li>Hot Chocolate</li>
-          </ul>
-          <h3>Cold Beverages</h3>
-          <ol>
-            <li>Iced Coffee</li>
-              <li>Lemonade</li>
-                <li>Orange Juice</li>
-          </ol>
-        <b><li><h2>Sandwiches</h2></li></b>
-        <ul>
-          <li><strong>Cheese Sandwich</strong></li>
-          <i>White cheese, tomato,cucumber,lettuce</i>
-          <li><strong>Russian Salad Sandwich</strong></li>
-          <i>Beans,green peas,carrots,mayo,potato</i>
-          <li><strong>Chicken Sandwich</strong></li>
-          <i>Chicken, Mayo</i>
-        </ul>
-          <b><li><h2>Desserts</h2></li></b>
-          <ul>
-            <li>Ice Cream</li>
-            <li>Cheese Cake</li>
-            <ol type="i">
-              <li>Blueberry Cheese Cake</li>
-              <li>Chocolate Cheese Cake</li>
-            </ol>
-          </ul>
-    </ol>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>S.A_consulting</title>
+	</head>
+
+	<body>
+		<h1 id="id_testing" class="class_testing" style="text-align: center" >SASHA ANTONENKO</h1>
+		<p style="text-align: center">Practical SDET and consultant</p>
+
+		<footer style="text-align: center">
+			<a href="mailto:antonenko.qa@gmail.com">antonenko.qa@gmail.com</a></p>
+			<p> &copy; 2018-<script>document.write(new Date().getFullYear())</script> Sasha Antonenko All Rights Reserved</p>
+		</footer>
+
+	</body>
+	
+	<script src='script.js'></script>
 </html>
