add navbar section via bootstrap

--- a/index.html
+++ b/index.html
@@ -5,11 +5,63 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>S.A_consulting</title>
+
+		<!-- Google Fonts -->
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
+
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 	</head>
 
 	<body>
-		<h1 id="id_testing" class="class_testing" style="text-align: center" >SASHA ANTONENKO</h1>
+	      <!-- Navbar Section -->
+		  <nav class= "navbar navbar-expand-lg navbar-dark bg-dark">
+
+			<a class="navbar-brand" href="#">S.A</a>
+			 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+			 <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <ul class="navbar-nav ml-auto"  >
+				<li class="nav-item" >
+				  <a class="nav-link" href="#header">Home</a>
+				</li>
+				<li class="nav-item" >
+				  <a class="nav-link" href="#gallery">Projects</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#testimonials">About Me</a>
+				</li>
+				<liclass="nav-item" >
+				  <a class="nav-link" href="#footer">Contact</a>
+				</li>
+			  </ul>
+			</div>
+		  </nav>
+		      <!-- Navbar Section -->
+
+		
+		
+	    <h1 id="id_testing" class="class_testing" style="text-align: center" >SASHA ANTONENKO</h1>
 		<p style="text-align: center">Practical SDET and consultant</p>
+
+		<!-- <div class="row g-0 bg-light position-relative" >
+			<div class="col-md-6 mb-md-0 p-md-4">
+			  <img src="..." class="w-100" alt="...">
+			</div>
+			<div class="col-md-6 p-4 ps-md-0">
+			  <h5 class="mt-0">Columns with stretched link</h5>
+			  <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
+			  <a href="#" class="stretched-link">Go somewhere</a>
+			</div>
+		  </div>  -->
+
+
+
+
+
 
 		<footer style="text-align: center">
 			<a href="mailto:antonenko.qa@gmail.com">antonenko.qa@gmail.com</a></p>
@@ -18,5 +70,12 @@
 
 	</body>
 	
-	<script src='script.js'></script>
+	<!-- <script src='script.js'></script> -->
+
+	 <!-- Optional JavaScript-->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
 </html>
