--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+		<!-- Style CSS -->
+        <link rel="stylesheet" href="css/style.css">
+
 	</head>
 
 	<body>
@@ -40,31 +43,48 @@
 			  </ul>
 			</div>
 		  </nav>
-		      <!-- Navbar Section -->
+		<!-- Navbar Section -->
 
-		
-		
-	    <h1 id="id_testing" class="class_testing" style="text-align: center" >SASHA ANTONENKO</h1>
-		<p style="text-align: center">Practical SDET and consultant</p>
+		<!-- Header Section -->
+		<header id="header" >
+			<div class="overlay ">
+			  <div class="container ">
+				<div class="row text-center ">
+				  <div class="col">
+					<h1 style="margin-top:50px" id="id_testing" class="class_testing"> SASHA ANTONENKO</h1>
 
-		<!-- <div class="row g-0 bg-light position-relative" >
-			<div class="col-md-6 mb-md-0 p-md-4">
-			  <img src="..." class="w-100" alt="...">
+					<p class="text-muted">Practical SDET and consultant</p>
+					<button  style="margin-bottom: 50px" type="button" name="button" class="btn btn-outline-secondary px-3">Action</button>
+				</div>
+			  
+
+<!-- 
+
+		<div class="container">
+			<div class="row">
+			  <div class="col">col</div>
+			  <div class="col">col</div>
+			  <div class="col">col</div>
+			  <div class="col">col</div>
 			</div>
-			<div class="col-md-6 p-4 ps-md-0">
-			  <h5 class="mt-0">Columns with stretched link</h5>
-			  <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-			  <a href="#" class="stretched-link">Go somewhere</a>
+			<div class="row">
+			  <div class="col-8">col-8</div>
+			  <div class="col-4">col-4</div>
 			</div>
-		  </div>  -->
+		  </div> -->
 
 
 
 
 
 
-		<footer style="text-align: center">
+
+
+		<div class="container">
+		<footer> 
+			<!-- <div class="shadow-lg p-3 mb-5 bg-body rounded"><a href="mailto:antonenko.qa@gmail.com">antonenko.qa@gmail.com</a></div> -->
 			<a href="mailto:antonenko.qa@gmail.com">antonenko.qa@gmail.com</a></p>
+			
 			<p> &copy; 2018-<script>document.write(new Date().getFullYear())</script> Sasha Antonenko All Rights Reserved</p>
 		</footer>
 
