refactor styles + add icons library

--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
 
 		<!-- Google Fonts -->
 		<!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
-
-
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet"> -->
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet"> -->
+		<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&family=Ms+Madi&display=swap" rel="stylesheet">		
+		
+		
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 		<!-- Style CSS -->
         <link rel="stylesheet" href="css/style.css">
 
+        <!--Icons -->
+		<script src="https://kit.fontawesome.com/56a441ee2c.js" crossorigin="anonymous"></script>
+
 	</head>
+
+
+
+
 
 	<body>
 	      <!-- Navbar Section -->
