add icons + new feature section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <link rel="stylesheet" href="css/style.css">
 
         <!--Icons -->
-		<script src="https://kit.fontawesome.com/56a441ee2c.js" crossorigin="anonymous"></script>
+		<!-- <script src="https://kit.fontawesome.com/56a441ee2c.js" crossorigin="anonymous"></script> -->
+		<script src="https://kit.fontawesome.com/17c04ee67d.js" crossorigin="anonymous"></script>
 
 	</head>
 
@@ -56,10 +57,10 @@
 		<!-- Navbar Section -->
 
 		<!-- Header Section -->
-		<header id="header" >
-			<div class="overlay ">
-			  <div class="container ">
-				<div class="row text-center ">
+	<header id="header" >
+		<div class="overlay ">
+		  <div class="container ">
+			<div class="row text-center ">				
 				  <div class="col">
 					<h1 style="margin-top:50px" id="id_testing" class="class_testing"> SASHA ANTONENKO</h1>
 
@@ -68,21 +69,39 @@
 				</div>
 			  
 
-<!-- 
+    <!-- Header Section -->
 
+    <!-- Features Section -->
+    <section id="features" class="py-1" >
 		<div class="container">
-			<div class="row">
-			  <div class="col">col</div>
-			  <div class="col">col</div>
-			  <div class="col">col</div>
-			  <div class="col">col</div>
+		  <div class="row mt-5 ">
+			<div class="col-md-4 text-center">
+			  <i class=" fab fa-odnoklassniki fa-4x"></i>
+			  <!-- <i class="fa-brands fa-instagram fa-4x"></i> -->
+			  <h3 class="mt-3">Easy Learning </h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+				 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
-			<div class="row">
-			  <div class="col-8">col-8</div>
-			  <div class="col-4">col-4</div>
+			<div class="col-md-4 text-center">
+			  <i class=" fas fa-rocket fa-4x"></i>
+			  <h3 class="mt-4">Innovative Technology</h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+				 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
-		  </div> -->
-
+			<div class="col-md-4 text-center">
+			  <i class=" fas fa-comment-dots fa-4x"></i>
+			  <h3 class="mt-3">Free Support</h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+				 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  
+			</div>
+  
+		  </div>
+  
+		</div>
+  
+	  </section>
+	  <!-- Features Section -->
 
 
 
