--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		<div class="container ">
 		  <div class="row ">
 			<div class="col-md-12 text-center">
-			  <h3>Our Work </h3>
+			  <h3>Projects </h3>
 			  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 				 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   
@@ -154,7 +154,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				  <span aria-hidden="true">&times;</span>
 				</button>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/2ELD1Ye_pws?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				<!-- <iframe src="images/modalVideo.mp4" width="100%" height="400" ></iframe> -->
+				<iframe width="420" height="270" src="https://www.youtube.com/embed/2ELD1Ye_pws?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				<!-- <iframe src="images/modalVideo.mp4" width="100%" height="400" ></iframe> -->
 			  </div>
 			</div>
 		 </div>
@@ -271,7 +271,7 @@
 
 
 
-
+	 <section id="footer">
 	  <div class="container">
 		<footer class="row text-center py-3 my-4 border-top">
 		  <div class="col-md-12">
@@ -280,6 +280,7 @@
 
 			</div>
 		</footer>
+	</section>
 
 
 
